// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavList isOpenがfalseの時に\`.nav-list\`が非表示 1`] = `
"<div>
  <transition-stub name=\\"nav-fade\\">
    <div class=\\"nav-list\\" style=\\"display: none;\\">
      <ul>
        <li>
          <div>
            <div class=\\"nav-item\\"><a class=\\"base-link--extend\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミーナビゲーションの画像\\" class=\\"base-img--extend base-img--lg\\">
                <p class=\\"base-text--extend\\">ダミーナビゲーション</p>
              </a></div>
          </div>
        </li>
        <li>
          <div>
            <div class=\\"nav-item\\"><a class=\\"base-link--extend\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミーナビゲーションの画像\\" class=\\"base-img--extend base-img--lg\\">
                <p class=\\"base-text--extend\\">ダミーナビゲーション</p>
              </a></div>
          </div>
        </li>
        <li>
          <div>
            <div class=\\"nav-item\\"><a class=\\"base-link--extend\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミーナビゲーションの画像\\" class=\\"base-img--extend base-img--lg\\">
                <p class=\\"base-text--extend\\">ダミーナビゲーション</p>
              </a></div>
          </div>
        </li>
        <li>
          <div>
            <div class=\\"nav-item\\"><a class=\\"base-link--extend\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミーナビゲーションの画像\\" class=\\"base-img--extend base-img--lg\\">
                <p class=\\"base-text--extend\\">ダミーナビゲーション</p>
              </a></div>
          </div>
        </li>
      </ul>
    </div>
  </transition-stub>
</div>"
`;

exports[`NavList isOpenがtrueの時に\`.nav-list\`が表示 1`] = `
"<div>
  <transition-stub name=\\"nav-fade\\">
    <div class=\\"nav-list\\">
      <ul>
        <li>
          <div>
            <div class=\\"nav-item\\"><a class=\\"base-link--extend\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミーナビゲーションの画像\\" class=\\"base-img--extend base-img--lg\\">
                <p class=\\"base-text--extend\\">ダミーナビゲーション</p>
              </a></div>
          </div>
        </li>
        <li>
          <div>
            <div class=\\"nav-item\\"><a class=\\"base-link--extend\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミーナビゲーションの画像\\" class=\\"base-img--extend base-img--lg\\">
                <p class=\\"base-text--extend\\">ダミーナビゲーション</p>
              </a></div>
          </div>
        </li>
        <li>
          <div>
            <div class=\\"nav-item\\"><a class=\\"base-link--extend\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミーナビゲーションの画像\\" class=\\"base-img--extend base-img--lg\\">
                <p class=\\"base-text--extend\\">ダミーナビゲーション</p>
              </a></div>
          </div>
        </li>
        <li>
          <div>
            <div class=\\"nav-item\\"><a class=\\"base-link--extend\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミーナビゲーションの画像\\" class=\\"base-img--extend base-img--lg\\">
                <p class=\\"base-text--extend\\">ダミーナビゲーション</p>
              </a></div>
          </div>
        </li>
      </ul>
    </div>
  </transition-stub>
</div>"
`;
